-*- mode:flyspell; -*-

$Id$

Changes since v2.7
==================

o Added physical information about a guide to the guide information dialog.

Changes since v2.6
==================

o Built with Toolbar2000 v2.1.4.

o The compatibility keystroke for pulling up the guide information should
  have been "?", not "v". Changed.

o Made sure that any "&" in the title of a menu from a guide is escaped so
  as not to be confused with a Windows' menu accelerator key.

o Made the first letter of each main menu title from a guide into an
  accelerator key. This could cause clashes with other accelerator keys but,
  if someone is trying to use just the keyboard, they're probably more
  interested in getting at the guide's menu that any of the other menus.

o The bookmark manager now makes a better guess at a default title for a
  bookmark.

o The guide printing code now makes a better guess at a good title for a
  print job.

o Added short-cuts for each of the window oriented menu items.

Changes since v2.5
==================

o The global finder now tells you -- in the status bar and as a hint -- the
  name of the guide that a hit was found in.

o WEG now remembers if the guide manager, bookmarks manager or the global
  finder windows were open and when you next run WEG opens them for you.

Changes since v2.4
==================

o Changed printing support so that it only prints selected text if there is
  a selection available.

Changes since v2.3
==================

o Added a "right-click" menu to the bookmarks window.

o Added printing support.

o Added support for many of the keystrokes that were supported by the DOS,
  GNU/Linux and OS/2 versions of EG. This support was also in WEG 1.x and
  I'd forgotten to add it to WEG 2.x.

Changes since v2.2
==================

o Removed the maximise and minimise buttons from the guide credits dialog.

o Added bookmarks.

o Added an extra check when loading a guide on startup that ensures that the