@@ -11,5 +11,3 @@ o Associating .NG files doesn't work so well with WEG now that it is an MDI
   application. Come up with a method of ensuring that files passed on the
   command line get opened in a previously running instance of WEG if such an
   instance exists.
-
-o URL scanner (was in WEG 1.x)
