@@ -51,6 +51,7 @@ object frmGuide: TfrmGuide
   Visible = True
   OnClose = FormClose
   OnCreate = FormCreate
+  OnDestroy = FormDestroy
   PixelsPerInch = 96
   TextHeight = 13
   object sbGuide: TStatusBar
